--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
-  "name": "website",
+  "name": "montek",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.0",
-    "@fortawesome/free-solid-svg-icons": "^6.1.0",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "alertifyjs": "^1.13.1",
-    "axios": "^0.26.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "axios": "^0.27.2",
+    "bulma": "^0.9.4",
+    "express": "^4.18.1",
+    "express-router": "^0.0.1",
+    "mongodb": "^4.6.0",
+    "mongoose": "^6.3.3",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-multi-carousel": "^2.8.0",
-    "react-router": "^6.2.2",
-    "react-router-dom": "^6.2.2",
-    "react-scripts": "^5.0.0",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "sass": "^1.51.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,10 +45,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "sass": "^1.49.9",
-    "sass-loader": "^12.6.0",
-    "webpack": "^5.70.0"
   }
 }
