--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bulma": "^0.9.4",
     "express": "^4.18.1",
     "express-router": "^0.0.1",
+    "moment": "^2.29.3",
     "mongodb": "^4.6.0",
     "mongoose": "^6.3.3",
     "react": "^18.1.0",
